cambios en textos

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="comic-bg" aria-hidden="true"></div>
 
     <header class="hero">
-        <div class="badge pop">¡INVITACIÓN OFICIAL!</div>
+        <div class="badge pop">¿COMO QUE AHORA HAY QUE CHAMBEAAAAR???</div>
 
-        <h1 class="title pop">TERMINAMOS LA ESCUELA</h1>
+        <h1 class="title pop">POR FIN TERMINAMOS LA ESCUELA</h1>
         <p class="subtitle reveal">YA CASI SOMOS INGES, PARA PONER MI PUESTO DE BARBACOA</p>
 
         <div class="card reveal">
@@ -60,15 +60,13 @@
             </div>
         </div>
 
-        <div class="pow reveal">
-            <span>POW!</span><span>BOOM!</span><span>WOW!</span>
-        </div>
+
     </header>
 
     <main class="container">
         <!-- Sección fotos tipo cómic -->
         <section class="section reveal">
-            <h3 class="section-title">Mi historia en la uni</h3>
+            <h3 class="section-title">A VECES EXTRAÑO LA UNI, PERO TOCA CHAMBEAR</h3>
             <p class="section-sub">Asi sobrevivi 4.5 años de carrera</p>
 
             <div class="manga">
@@ -78,24 +76,24 @@
 
                     <div class="page show">
                         <img class="media" src="assets/halcones.jpeg" alt="">
-                        <div class="caption">Capítulo 1: Dormilón 😴</div>
+                        <div class="caption">Capítulo 1</div>
                     </div>
 
                     <div class="page">
                         <video class="media" controls playsinline preload="metadata">
                             <source src="assets/mimido.mp4" type="video/mp4">
                         </video>
-                        <div class="caption">Capítulo 2: No dormí pero entregué 😤</div>
+                        <div class="caption">Capítulo 2: No dormí(pero en mi casa) </div>
                     </div>
 
                     <div class="page">
                         <img class="media" src="assets/amigos.jpeg" alt="">
-                        <div class="caption">Capítulo 3: Equipo de héroes 🫂</div>
+                        <div class="caption">Capítulo 3</div>
                     </div>
 
                     <div class="page">
                         <img class="media" src="assets/yo.jpeg" alt="">
-                        <div class="caption">Final: Graduado 🎓🔥</div>
+                        <div class="caption">Final</div>
                     </div>
 
                     <button class="nav next" id="nextPage">⟶</button>
@@ -110,18 +108,16 @@
 
         <!-- Detalles extra -->
         <section class="section reveal">
-            <h3 class="section-title">Código de héroes 🦸‍♂️</h3>
+            <h3 class="section-title">Código de vestiemnta</h3>
             <div class="rules">
-                <div class="rule bubble">🎁 Traje: Casual / Cómodo</div>
-                <div class="rule bubble">🍕 Habrá comida y bebida</div>
-                <div class="rule bubble">📸 Se aceptan fotos épicas</div>
-                <div class="rule bubble">😎 Lleva actitud de superhéroe</div>
+                <div class="rule bubble">🎁 Tematica: Superheroes</div>
+                <div class="rule bubble">🍕 Habrá comida y chanceeeee bebida (si hay)</div>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <p>Hecho con vibra cómic ⚡ | <span id="year"></span></p>
+        <p>Hecho con Fe, estaba aburrido en el trabajo xd | <span id="year"></span></p>
     </footer>
 
     <script src="script.js"></script>
