--- a/index.html
+++ b/index.html
@@ -110,12 +110,13 @@
         <section class="section reveal">
             <h3 class="section-title">Código de vestiemnta</h3>
             <div class="rules">
-                <div class="rule bubble">🎁 Tematica: Superheroes</div>
-                <div class="rule bubble">🍕 Habrá comida y chanceeeee bebida (si hay)</div>
+                <div class="rule bubble"> Tematica: Superheroes</div>
+                <div class="rule bubble"> Habrá comida y chanceeeee bebida (si hay)</div>
             </div>
         </section>
     </main>
-
+    <p>
+    <p>
     <footer class="footer">
         <p>Hecho con Fe, estaba aburrido en el trabajo xd | <span id="year"></span></p>
     </footer>
